force-app/main/default/objects/Account/fields/Competenze__c.field-meta.xml
<CustomField>
    <fullName>Competenze__c</fullName>
    <label>Competenze</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arpista</fullName>
            </value>
            <value>
                <fullName>Ballerina</fullName>
            </value>
            <value>
                <fullName>Banjoista</fullName>
            </value>
            <value>
                <fullName>Batterista</fullName>
            </value>
            <value>
                <fullName>Bassista</fullName>
            </value>
            <value>
                <fullName>Burlesque, Boylesque</fullName>
            </value>
            <value>
                <fullName>Cajonista</fullName>
            </value>
            <value>
                <fullName>Cantante</fullName>
            </value>
            <value>
                <fullName>Chitarrista</fullName>
            </value>
            <value>
                <fullName>Clarinetista</fullName>
            </value>
            <value>
                <fullName>Contrabbassista</fullName>
            </value>
            <value>
                <fullName>Dhol</fullName>
            </value>
            <value>
                <fullName>Dj</fullName>
            </value>
            <value>
                <fullName>Drag Queen</fullName>
            </value>
            <value>
                <fullName>Figurante</fullName>
            </value>
            <value>
                <fullName>Fisarmonicista</fullName>
            </value>
            <value>
                <fullName>Flautista</fullName>
            </value>
            <value>
                <fullName>Folk</fullName>
            </value>
            <value>
                <fullName>Giullare</fullName>
            </value>
            <value>
                <fullName>Mandolinista</fullName>
            </value>
            <value>
                <fullName>Mariachi</fullName>
            </value>
            <value>
                <fullName>Mangiafuoco</fullName>
            </value>
            <value>
                <fullName>Percussionista</fullName>
            </value>
            <value>
                <fullName>Pianista</fullName>
            </value>
            <value>
                <fullName>Pole Dancer</fullName>
            </value>
            <value>
                <fullName>Sassofonista</fullName>
            </value>
            <value>
                <fullName>Soprano</fullName>
            </value>
            <value>
                <fullName>Tenore</fullName>
            </value>
            <value>
                <fullName>Tessutista</fullName>
            </value>
            <value>
                <fullName>Trombettista</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>