force-app/main/default/objects/Account/fields/Fase_rapporto__c.field-meta.xml
<CustomField>
    <fullName>Fase_rapporto__c</fullName>
    <label>Fase rapporto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>Consolidata</fullName>
            </value>
            <value>
                <fullName>Rapporto in costruzione</fullName>
            </value>
            <value>
                <fullName>Avvio del dialogo</fullName>
            </value>
            <value>
                <fullName>ex champion</fullName>
            </value>
            <value>
                <fullName>Cliente di un nostro champion</fullName>
            </value>
            <value>
                <fullName>Non in target</fullName>
            </value>
            <value>
                <fullName>Basso Potenziale</fullName>
            </value>
            <value>
                <fullName>Alto potenziale</fullName>
            </value>
            <value>
                <fullName>Saltuaria</fullName>
            </value>
            <value>
                <fullName>Blacklist</fullName>
            </value>
            <value>
                <fullName>Contatti rallentati</fullName>
            </value>
            <value>
                <fullName>Non pervenuto</fullName>
            </value>
            <value>
                <fullName>Ha cambiato lavoro/settore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>