force-app/main/default/objects/Account/recordTypes/Business_Account.recordType-meta.xml
<RecordType>
    <fullName>Business_Account</fullName>
    <active>true</active>
    <description>Usato per Account che non sono persone fisiche</description>
    <label>Organizzatori</label>
</RecordType>