force-app/main/default/objects/Account/recordTypes/Fornitori.recordType-meta.xml
<RecordType>
    <fullName>Fornitori</fullName>
    <active>true</active>
    <label>Fornitori</label>
</RecordType>