force-app/main/default/objects/Account/listViews/Fornitori.listView-meta.xml
<ListView>
    <fullName>Fornitori</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Competenze__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Fornitori</value>
    </filters>
    <label>Fornitori</label>
</ListView>