force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Email_per_fatturazione__pc</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>VAT_Number__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>